tests/baselines/reference/funClodule.errors.txt
==== tests/cases/compiler/funClodule.ts (3 errors) ====
    declare function foo();
    declare module foo {
        export function x(): any;
    }
    declare class foo { } // Should error
                  ~~~
!!! funClodule.ts(5,15): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	funClodule.ts(1,1)
    
    
    declare class foo2 { }
    declare module foo2 {
        export function x(): any;
    }
    declare function foo2(); // Should error
                     ~~~~
!!! funClodule.ts(12,18): error TS2000: Duplicate identifier 'foo2'. Additional locations:
!!! 	funClodule.ts(8,1)
    
    
    function foo3() { }
    module foo3 {
         export function x(): any { }
    }
    class foo3 { } // Should error
          ~~~~
!!! funClodule.ts(19,7): error TS2000: Duplicate identifier 'foo3'. Additional locations:
!!! 	funClodule.ts(15,1)